@@ -1,3 +1,7 @@
+- orphans handling
+  o do not offer to remove current kernel (even if it's not a official
+    kernel
+
 Version 6.27.1 - 18 August 2009
 
 - make sure error messages are displayed (was broken as part of fix #50776)
